--- a/NeueStunde.ui
+++ b/NeueStunde.ui
@@ -10,8 +10,14 @@
     <x>0</x>
     <y>0</y>
     <width>407</width>
-    <height>447</height>
+    <height>494</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Neue Stunde</string>
@@ -188,22 +194,10 @@
           <item>
            <widget class="QComboBox" name="comboBoxSerie">
             <property name="sizePolicy">
-             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
-            </property>
-            <property name="minimumSize">
-             <size>
-              <width>51</width>
-              <height>21</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>16777215</width>
-              <height>20</height>
-             </size>
             </property>
             <property name="inputMethodHints">
              <set>Qt::ImhNone</set>
