--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -295,8 +295,8 @@ selection-color: rgb(255, 255, 255);</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>730</width>
-             <height>639</height>
+             <width>726</width>
+             <height>635</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_4">
@@ -554,7 +554,7 @@ selection-color: rgb(255, 255, 255);</string>
      <x>0</x>
      <y>0</y>
      <width>1034</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuDatei">
@@ -562,6 +562,7 @@ selection-color: rgb(255, 255, 255);</string>
      <string>Datei</string>
     </property>
     <addaction name="actionSynchronisation_einrichten"/>
+    <addaction name="actionTutorenmodus"/>
    </widget>
    <addaction name="menuDatei"/>
   </widget>
@@ -580,6 +581,11 @@ selection-color: rgb(255, 255, 255);</string>
   <action name="action_ber">
    <property name="text">
     <string>Über</string>
+   </property>
+  </action>
+  <action name="actionTutorenmodus">
+   <property name="text">
+    <string>Tutorenmodus</string>
    </property>
   </action>
  </widget>
