--- a/Tutmodgui.ui
+++ b/Tutmodgui.ui
@@ -1498,10 +1498,10 @@
       <widget class="QLabel" name="label_16">
        <property name="geometry">
         <rect>
-         <x>150</x>
+         <x>140</x>
          <y>100</y>
-         <width>81</width>
-         <height>16</height>
+         <width>31</width>
+         <height>20</height>
         </rect>
        </property>
        <property name="font">
@@ -1516,14 +1516,17 @@
        <property name="text">
         <string>111</string>
        </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
       </widget>
       <widget class="QLabel" name="label_17">
        <property name="geometry">
         <rect>
-         <x>150</x>
+         <x>140</x>
          <y>120</y>
-         <width>81</width>
-         <height>16</height>
+         <width>31</width>
+         <height>20</height>
         </rect>
        </property>
        <property name="font">
@@ -1537,6 +1540,9 @@
        </property>
        <property name="text">
         <string>111</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
       <widget class="QLabel" name="label_18">
@@ -1564,9 +1570,9 @@
       <widget class="QLabel" name="label_19">
        <property name="geometry">
         <rect>
-         <x>150</x>
+         <x>140</x>
          <y>150</y>
-         <width>81</width>
+         <width>31</width>
          <height>20</height>
         </rect>
        </property>
@@ -1581,6 +1587,9 @@
        </property>
        <property name="text">
         <string>111</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
       <widget class="QPushButton" name="pushButton_38">
@@ -1641,7 +1650,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QDateEdit" name="dateEdit"/>
+         <widget class="QDateEdit" name="dateEdit">
+          <property name="calendarPopup">
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item>
          <widget class="QLabel" name="label_13">
@@ -1654,7 +1667,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QDateEdit" name="dateEdit_2"/>
+         <widget class="QDateEdit" name="dateEdit_2">
+          <property name="calendarPopup">
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -1726,10 +1743,10 @@
       <widget class="QLabel" name="label_22">
        <property name="geometry">
         <rect>
-         <x>150</x>
+         <x>140</x>
          <y>100</y>
-         <width>81</width>
-         <height>16</height>
+         <width>31</width>
+         <height>20</height>
         </rect>
        </property>
        <property name="font">
@@ -1744,14 +1761,17 @@
        <property name="text">
         <string>111</string>
        </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
       </widget>
       <widget class="QLabel" name="label_23">
        <property name="geometry">
         <rect>
-         <x>150</x>
+         <x>140</x>
          <y>120</y>
-         <width>81</width>
-         <height>16</height>
+         <width>31</width>
+         <height>20</height>
         </rect>
        </property>
        <property name="font">
@@ -1765,6 +1785,9 @@
        </property>
        <property name="text">
         <string>111</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
       <widget class="QLabel" name="label_24">
@@ -1792,9 +1815,9 @@
       <widget class="QLabel" name="label_25">
        <property name="geometry">
         <rect>
-         <x>150</x>
+         <x>140</x>
          <y>150</y>
-         <width>81</width>
+         <width>31</width>
          <height>20</height>
         </rect>
        </property>
@@ -1809,6 +1832,9 @@
        </property>
        <property name="text">
         <string>111</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
       <widget class="QPushButton" name="pushButton_39">
@@ -1869,7 +1895,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QDateEdit" name="dateEdit_3"/>
+         <widget class="QDateEdit" name="dateEdit_3">
+          <property name="calendarPopup">
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item>
          <widget class="QLabel" name="label_27">
@@ -1882,7 +1912,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QDateEdit" name="dateEdit_4"/>
+         <widget class="QDateEdit" name="dateEdit_4">
+          <property name="calendarPopup">
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
