--- a/Tutmodgui.ui
+++ b/Tutmodgui.ui
@@ -1592,7 +1592,7 @@
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_38">
+      <widget class="QPushButton" name="pushButtonListeKlasse_1">
        <property name="geometry">
         <rect>
          <x>20</x>
@@ -1837,7 +1837,7 @@
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_39">
+      <widget class="QPushButton" name="pushButtonListeKlasse_2">
        <property name="geometry">
         <rect>
          <x>20</x>
