--- a/susverwgui.ui
+++ b/susverwgui.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>992</width>
-    <height>685</height>
+    <width>1005</width>
+    <height>670</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
    <iconset>
     <normaloff>kursbuch.ico</normaloff>kursbuch.ico</iconset>
   </property>
-  <layout class="QGridLayout" name="gridLayout_5">
+  <layout class="QGridLayout" name="gridLayout_5" columnstretch="2,0,0,0,4">
    <item row="0" column="0" colspan="5">
     <widget class="QLabel" name="label_2">
      <property name="maximumSize">
@@ -320,6 +320,11 @@
            <string>Klasse</string>
           </property>
          </column>
+         <column>
+          <property name="text">
+           <string>Zugangsdatum</string>
+          </property>
+         </column>
         </widget>
        </widget>
        <widget class="QSplitter" name="splitter">
@@ -427,6 +432,11 @@
        <column>
         <property name="text">
          <string>Klasse</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>Abgangsdatum</string>
         </property>
        </column>
       </widget>
