--- a/AbZuDialog.ui
+++ b/AbZuDialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Abgangsdatum</class>
- <widget class="QDialog" name="Abgangsdatum">
+ <class>AbZuDialog</class>
+ <widget class="QDialog" name="AbZuDialog">
   <property name="windowModality">
    <enum>Qt::ApplicationModal</enum>
   </property>
