--- a/susverwgui.ui
+++ b/susverwgui.ui
@@ -159,6 +159,9 @@
          <height>30</height>
         </size>
        </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item row="0" column="0">
