--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -295,8 +295,8 @@ selection-color: rgb(255, 255, 255);</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>726</width>
-             <height>635</height>
+             <width>730</width>
+             <height>639</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_4">
@@ -554,15 +554,25 @@ selection-color: rgb(255, 255, 255);</string>
      <x>0</x>
      <y>0</y>
      <width>1034</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuDatei">
     <property name="title">
      <string>Datei</string>
     </property>
+    <widget class="QMenu" name="menuExport">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="title">
+      <string>Export</string>
+     </property>
+     <addaction name="actionKursliste_CSV"/>
+    </widget>
     <addaction name="actionSynchronisation_einrichten"/>
     <addaction name="actionTutorenmodus"/>
+    <addaction name="menuExport"/>
    </widget>
    <addaction name="menuDatei"/>
   </widget>
@@ -586,6 +596,11 @@ selection-color: rgb(255, 255, 255);</string>
   <action name="actionTutorenmodus">
    <property name="text">
     <string>Tutorenmodus</string>
+   </property>
+  </action>
+  <action name="actionKursliste_CSV">
+   <property name="text">
+    <string>Kursliste (CSV)</string>
    </property>
   </action>
  </widget>
