--- a/MainWindow_new.ui
+++ b/MainWindow_new.ui
@@ -508,7 +508,7 @@ selection-color: rgb(255, 255, 255);</string>
     </property>
     <widget class="QMenu" name="menuExport">
      <property name="enabled">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <property name="title">
       <string>Export</string>
@@ -525,9 +525,11 @@ selection-color: rgb(255, 255, 255);</string>
     <property name="title">
      <string>Bearbeiten</string>
     </property>
-    <addaction name="actionKopieren"/>
-    <addaction name="actionEinfuegen"/>
+    <addaction name="actionUndo"/>
+    <addaction name="separator"/>
     <addaction name="actionAusschneiden"/>
+    <addaction name="actionEinfuegen"/>
+    <addaction name="actionKopieren"/>
    </widget>
    <widget class="QMenu" name="menuExtras">
     <property name="title">
@@ -691,6 +693,9 @@ selection-color: rgb(255, 255, 255);</string>
    <property name="text">
     <string>Beenden</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
+   </property>
   </action>
   <action name="actionUeber">
    <property name="text">
@@ -701,15 +706,32 @@ selection-color: rgb(255, 255, 255);</string>
    <property name="text">
     <string>Kopieren</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+C</string>
+   </property>
   </action>
   <action name="actionEinfuegen">
    <property name="text">
     <string>Einfügen</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+V</string>
+   </property>
   </action>
   <action name="actionAusschneiden">
    <property name="text">
     <string>Ausschneiden</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+X</string>
+   </property>
+  </action>
+  <action name="actionUndo">
+   <property name="text">
+    <string>Rückgängig</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Z</string>
    </property>
   </action>
  </widget>
