--- a/Tutmodgui.ui
+++ b/Tutmodgui.ui
@@ -1698,7 +1698,7 @@
        <property name="geometry">
         <rect>
          <x>20</x>
-         <y>190</y>
+         <y>210</y>
          <width>271</width>
          <height>25</height>
         </rect>
@@ -1776,6 +1776,19 @@
          </widget>
         </item>
        </layout>
+      </widget>
+      <widget class="QPushButton" name="pushButtonUebersicht">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>180</y>
+         <width>271</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Fehlzeitenübersicht Schüler*in</string>
+       </property>
       </widget>
      </widget>
     </item>
@@ -1943,7 +1956,7 @@
        <property name="geometry">
         <rect>
          <x>20</x>
-         <y>190</y>
+         <y>210</y>
          <width>271</width>
          <height>25</height>
         </rect>
@@ -2021,6 +2034,19 @@
          </widget>
         </item>
        </layout>
+      </widget>
+      <widget class="QPushButton" name="pushButtonUebersicht_2">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>180</y>
+         <width>271</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Fehlzeitenübersicht Schüler*in</string>
+       </property>
       </widget>
      </widget>
     </item>
