--- a/FzOverview.ui
+++ b/FzOverview.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>780</width>
-    <height>588</height>
+    <height>647</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Fehlzeitenübersicht aktuelle*r Schueler*in</string>
+   <string>Fehlzeitenübersicht aktuelle*r Schüler*in</string>
   </property>
   <property name="windowIcon">
    <iconset>
@@ -32,6 +32,12 @@
      </property>
      <attribute name="horizontalHeaderDefaultSectionSize">
       <number>50</number>
+     </attribute>
+     <attribute name="verticalHeaderMinimumSectionSize">
+      <number>25</number>
+     </attribute>
+     <attribute name="verticalHeaderDefaultSectionSize">
+      <number>25</number>
      </attribute>
      <column>
       <property name="text">
@@ -93,6 +99,13 @@
        <string>B 4.</string>
       </property>
      </column>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Fehlzeitenübersicht Schueler*in vom ... bis ...</string>
+     </property>
     </widget>
    </item>
   </layout>
