--- a/MainWindow_new.ui
+++ b/MainWindow_new.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1034</width>
-    <height>723</height>
+    <width>1045</width>
+    <height>737</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -314,8 +314,8 @@ selection-color: rgb(255, 255, 255);</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>730</width>
-             <height>639</height>
+             <width>733</width>
+             <height>635</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_4">
@@ -436,7 +436,7 @@ selection-color: rgb(255, 255, 255);</string>
                  </font>
                 </property>
                 <property name="text">
-                 <string>anw.</string>
+                 <string>anw</string>
                 </property>
                </widget>
                <widget class="QLabel" name="label_Schulv">
@@ -455,7 +455,7 @@ selection-color: rgb(255, 255, 255);</string>
                  </font>
                 </property>
                 <property name="text">
-                 <string>Schulv.</string>
+                 <string>S/K</string>
                 </property>
                </widget>
                <widget class="QLabel" name="label_Schulv_2">
@@ -474,7 +474,7 @@ selection-color: rgb(255, 255, 255);</string>
                  </font>
                 </property>
                 <property name="text">
-                 <string>Quarantäne</string>
+                 <string>Q</string>
                 </property>
                </widget>
               </widget>
@@ -487,12 +487,63 @@ selection-color: rgb(255, 255, 255);</string>
                  <height>31</height>
                 </rect>
                </property>
+               <property name="font">
+                <font>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                </font>
+               </property>
                <property name="text">
                 <string>Kurshefteintrag vom
 ...</string>
                </property>
                <property name="wordWrap">
                 <bool>true</bool>
+               </property>
+              </widget>
+              <widget class="QLabel" name="label_3">
+               <property name="geometry">
+                <rect>
+                 <x>10</x>
+                 <y>60</y>
+                 <width>141</width>
+                 <height>501</height>
+                </rect>
+               </property>
+               <property name="text">
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt; font-weight:600;&quot;&gt;Legende&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;anw = anwesend&lt;br/&gt;uFs = unentsch. Fehlstd.&lt;br/&gt;eFs = entsch. Fehlstd.&lt;br/&gt;S/K = Schulveran-staltung oder Klausur&lt;br/&gt;Q = Quarantäne&lt;br/&gt;&lt;br/&gt;&lt;/span&gt;&lt;span style=&quot; font-size:9pt; font-weight:600;&quot;&gt;Klausuren&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Fehlen SuS in anderen Stunden durch Klausuren im eigenen Fach, werden diese Stunden, wenn sie dafür ganz ausfallen, einzeln angelegt und nur die Klausurschreiber in diesen Stunden auf S/K gestellt. Fehlen Klausurschreiber, fehlen sie in allen dieser Klausurstunden. &lt;br/&gt;&lt;br/&gt;ACHTUNG: Eventuelle Fehlzeiten der Nicht-Klausurschreiber müssen unangetastet bleiben.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+               </property>
+               <property name="wordWrap">
+                <bool>true</bool>
+               </property>
+              </widget>
+              <widget class="Line" name="line_2">
+               <property name="geometry">
+                <rect>
+                 <x>9</x>
+                 <y>45</y>
+                 <width>141</width>
+                 <height>16</height>
+                </rect>
+               </property>
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+              </widget>
+              <widget class="Line" name="line">
+               <property name="geometry">
+                <rect>
+                 <x>149</x>
+                 <y>52</y>
+                 <width>20</width>
+                 <height>571</height>
+                </rect>
+               </property>
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
                </property>
               </widget>
              </widget>
@@ -512,8 +563,8 @@ selection-color: rgb(255, 255, 255);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1034</width>
-     <height>26</height>
+     <width>1045</width>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuDatei">
